# boxednix

./: .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
assets/: default_flake.nix
src/: cli.rs  editor.rs  gitignore.rs  lib.rs  main.rs
src/config/: mod.rs  model.rs
src/file_io/: context.rs  hash.rs  identity.rs  mod.rs
src/redact/: bcrypt.rs  comment.rs  mod.rs  model.rs  pattern.rs  psk.rs  replace.rs  sha.rs
src/redact/nix/: mod.rs
src/redact/tests/: debug.rs  mod.rs
src/session/: mod.rs  session.rs  session_file.rs
